--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </ul>
               </nav>
               <address class="phone">
-                <img src="/img/phone_icon.png" alt="" class="phone__icon">
+                <img src="./img/phone_icon.png" alt="" class="phone__icon">
                 <a href="tel:+7(800)9039090" class="phone__link">8 800 903 90 90</a>
               </address>
             </header>
