первая-третья секция

--- a/index.html
+++ b/index.html
@@ -124,9 +124,129 @@
           </div>
         </div>
       </section>
-      <section class="info">
+      <section class="board">
         <div class="container">
-          <div class="info-content">
+          <div class="board-content">
+            <div class="board__peview">
+              <img src="./img/oneboard.png" alt="" class="board__pic">
+            </div>
+            <div class="feature">
+              <div class="feature__options">
+                <img src="./img/options.png" alt="" class="feature__options-icon">
+                <div class="feature__options-title">параметры</div>
+              </div>
+              <div class="feature__specification">
+                <h3 class="board__title">лонгборд 2.0</h3>
+                <div class="board__desc">Устойчивая доска для новичков. На них легко лежать, сидеть, грести, разгребаться на волны и ехать. Размер и плавучесть доски позволяет брать очень маленькие и пологие волны и не спеша, не прилагая особых усилий ехать по ним.
+                </div>
+                <div class="board__ins">
+                  <div class="ins__lengs">
+                    Длина доски <span class="ins__specification">от 2,5 метров </span>
+                  </div>
+                  <div class="ins__width">
+                    Ширина доски <span class="ins__specification">от 40 сантиметров</span> 
+                  </div>
+                </div>
+                <div class="price">
+                  <div class="price__board">
+                    7000
+                  </div>
+                  <div class="btn btn-price">
+                    заказать
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <scetion class="team">
+        <div class="container">
+          <div class="team__content">
+            <div class="team__title">
+              команда
+            </div>
+            <ul class="team__list">
+              <li class="team__item">
+                <div class="team__user">
+                  <img src=".//img/user_one.png" alt="" class="team__user-pic">
+                  <div class="team__user-name">
+                    Борис Федорович
+                  </div>
+                  <ul class="user__list">
+                    <li class="user__item">
+                      <div class="user__skils">
+                        Спортсмен
+                      </div>
+                      <div class="user__desc">
+                        Участвует в разработке серфбордов
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li class="team__item">
+                <div class="team__user">
+                  <img src=".//img/user_two.png" alt="" class="team__user-pic">
+                  <div class="team__user-name">
+                    Ольга Невзорова
+                  </div>
+                  <ul class="user__list">
+                    <li class="user__item">
+                      <div class="user__skils">
+                        Спортсмен
+                      </div>
+                      <div class="user__desc">
+                        Участвует в разработке серфбордов
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li class="team__item">
+                <div class="team__user">
+                  <img src=".//img/user_three.png" alt="" class="team__user-pic">
+                  <div class="team__user-name">
+                    Ингвар Нильсон
+                  </div>
+                  <ul class="user__list">
+                    <li class="user__item">
+                      <div class="user__skils">
+                        Спортсмен
+                      </div>
+                      <div class="user__desc">
+                        Участвует в разработке серфбордов
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li class="team__item">
+                <div class="team__user">
+                  <img src=".//img/user_four.png" alt="" class="team__user-pic">
+                  <div class="team__user-name">
+                    Екатерина Иванова
+                  </div>
+                  <ul class="user__list">
+                    <li class="user__item">
+                      <div class="user__skils">
+                        Спортсмен
+                      </div>
+                      <div class="user__desc">
+                        Участвует в разработке серфбордов
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              
+            </ul>
+          </div>
+        </div>
+      </scetion>
+      <section class="slider">
+        <div class="content">
+          <div class="slider__content">
             
           </div>
         </div>
