--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
               <li class="team__item">
                 <div class="team__user">
                   <img src=".//img/user_one.png" alt="" class="team__user-pic">
-                  <div class="team__user-name">
+                  <button class="team__user-name" type="button">
                     Борис Федорович
-                  </div>
+                  </button>
                   <ul class="user__list">
                     <li class="user__item">
                       <div class="user__skils">
@@ -188,9 +188,9 @@
               <li class="team__item">
                 <div class="team__user">
                   <img src=".//img/user_two.png" alt="" class="team__user-pic">
-                  <div class="team__user-name">
+                  <button class="team__user-name" type="button">
                     Ольга Невзорова
-                  </div>
+                  </button>
                   <ul class="user__list">
                     <li class="user__item">
                       <div class="user__skils">
@@ -206,9 +206,9 @@
               <li class="team__item">
                 <div class="team__user">
                   <img src=".//img/user_three.png" alt="" class="team__user-pic">
-                  <div class="team__user-name">
+                  <button class="team__user-name" type="button">
                     Ингвар Нильсон
-                  </div>
+                  </button>
                   <ul class="user__list">
                     <li class="user__item">
                       <div class="user__skils">
@@ -224,9 +224,9 @@
               <li class="team__item">
                 <div class="team__user">
                   <img src=".//img/user_four.png" alt="" class="team__user-pic">
-                  <div class="team__user-name">
+                  <button class="team__user-name" type="button">
                     Екатерина Иванова
-                  </div>
+                  </button>
                   <ul class="user__list">
                     <li class="user__item">
                       <div class="user__skils">
@@ -253,6 +253,8 @@
       </section>
     </div>
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="js/acco.js"></script>
 </body>
 
 </html>
